# dnspython

./: .coverage.ini  .csproj  .devcontainer.json  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  LICENSE  MANIFEST.in  Makefile  README  README.md  SECURITY.md  TODO  azure-pipelines.yml  codecov.yml  differences.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  send_notify.py  setup.cfg  setup.py  tox.ini
.arch-ids/: ChangeLog.id  LICENSE.id  MANIFEST.in.id  Makefile.id  README.id  TODO.id  setup.py.id
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  python-2-2-branch.yml  python-package.yml  test-publish.yml
dns/: __init__.py  _asyncbackend.py  _asyncio_backend.py  _compat.py  _curio_backend.py  _ddr.py  _dnssec_util.py  _features.py  _immutable_attr.py  _immutable_ctx.py  _name_util.py  _no_ssl.py  _render_util.py  _tls_util.py  _trio_backend.py  asyncbackend.py  asyncbackend.pyi  asyncquery.py  asyncquery.pyi  asyncresolver.py  asyncresolver.pyi  asyncserver.py  btree.py  btreezone.py  dnssec.py  dnssec.pyi  dnssectypes.py  e164.py  e164.pyi  edns.py  edns.pyi  entropy.py  entropy.pyi  enum.py  exception.py  exception.pyi  flags.py  grange.py  hash.py  https.py  (+67 more)
dns/.arch-ids/: =id  __init__.py.id  dnssec.py.id  exception.py.id  flags.py.id  inet.py.id  ipv4.py.id  ipv6.py.id  message.py.id  name.py.id  namedict.py.id  node.py.id  opcode.py.id  query.py.id  rcode.py.id  rdata.py.id  rdataclass.py.id  rdataset.py.id  rdatatype.py.id  renderer.py.id  resolver.py.id  rrset.py.id  set.py.id  tokenizer.py.id  tsig.py.id  tsigkeyring.py.id  ttl.py.id  update.py.id  version.py.id  zone.py.id
dns/constants/: _dnssec_algorithm.py  _edns_optiontype.py  _flags_ednsflag.py  _flags_flag.py  _message_messagesection.py  _opcode_opcode.py  _rcode_rcode.py  _rdataclass_rdataclass.py  _rdatatype_rdatatype.py  _rdtypes_dnskeybase_flag.py  _update_updatesection.py
dns/dnssec/: __init__.py  algbase.py  algutils.py  dsa.py  ecdsa.py  eddsa.py  rsa.py
dns/dnssecalgs/: __init__.py  base.py  cryptography.py  dsa.py  ecdsa.py  eddsa.py  rsa.py
dns/quic/: __init__.py  _asyncio.py  _common.py  _sync.py  _trio.py
dns/rdtypes/: DYNA.py  DYNC.py  __init__.py  base64base.py  delegbase.py  dnskeybase.py  dnskeybase.pyi  dsbase.py  dsbase.pyi  euibase.py  keybase.py  mxbase.py  mxbase.pyi  nsbase.py  rrsigbase.py  sigbase.py  svcbbase.py  tlsabase.py  txtbase.py  txtbase.pyi  util.py
dns/rdtypes/.arch-ids/: =id  __init__.py.id  keybase.py.id  mxbase.py.id  nsbase.py.id  sigbase.py.id
dns/rdtypes/ANY/: A.py  AAAA.py  AFSDB.py  AMTRELAY.py  AVC.py  BRID.py  CAA.py  CDNSKEY.py  CDS.py  CERT.py  CNAME.py  CSYNC.py  DELEG.py  DELEGI.py  DLV.py  DNAME.py  DNSKEY.py  DNSKEY.pyi  DS.py  DS.pyi  DSYNC.py  EUI48.py  EUI64.py  GPOS.py  HHIT.py  HINFO.py  HIP.py  ISDN.py  KEY.py  L32.py  L64.py  LOC.py  LP.py  MX.py  NID.py  NINFO.py  NS.py  NSEC.py  NSEC3.py  NSEC3PARAM.py  (+22 more)
dns/rdtypes/ANY/.arch-ids/: =id  AFSDB.py.id  CERT.py.id  CNAME.py.id  DNAME.py.id  DNSKEY.py.id  DS.py.id  GPOS.py.id  HINFO.py.id  ISDN.py.id  KEY.py.id  LOC.py.id  MX.py.id  NS.py.id  NSEC.py.id  NXT.py.id  PTR.py.id  RP.py.id  RRSIG.py.id  RT.py.id  (+6 more)
dns/rdtypes/CH/: A.py  __init__.py
dns/rdtypes/IN/: A.py  AAAA.py  APL.py  DELEGPARAM.py  DHCID.py  DYNA.py  DYNC.py  HTTPS.py  IPSECKEY.py  KX.py  NAPTR.py  NSAP.py  NSAP_PTR.py  PX.py  SRV.py  SVCB.py  WKS.py  __init__.py
dns/trio/: __init__.py  query.py  query.pyi  resolver.py  resolver.pyi
dns/tsigtypes/: algorithms.py  gss_tsig.py  hmac_md5.py  hmac_sha1.py  hmac_sha224.py  hmac_sha256.py  hmac_sha384.py  hmac_sha512.py  hmacbase.py  tsigbase.py
doc/: Makefile  async-backend.rst  async-query.rst  async-resolver-class.rst  async-resolver-functions.rst  async-resolver.rst  async.rst  community.rst  conf.py  dnssec.rst  examples.rst  exceptions.rst  inbound-xfr-class.rst  index.rst  installation.rst  license.rst  manual.rst  message-class.rst  message-edns.rst  message-flags.rst  message-make.rst  message-opcode.rst  message-query.rst  message-rcode.rst  message-update.rst  message.rst  name-class.rst  name-codecs.rst  name-dict.rst  name-exceptions.rst  name-helpers.rst  name-make.rst  name.rst  py2vs3.rst  query.rst  rdata-class.rst  rdata-make.rst  rdata-set-classes.rst  rdata-set-make.rst  rdata-subclasses.rst  (+25 more)
doc/util/: auto-values.py
examples/: async_dns.py  broken_example.yaml  ddns.py  ddns_client.py  ddns_server.py  ddr.py  doh-json.py  doh.py  doq.py  dot.py  e164.py  ecs.py  edns.py  edns_resolver.py  mx-typed.py  mx.py  name.py  query_specific.py  receive_notify.py  reverse.py  reverse_name.py  send_notify.py  tracegraph.py  trio.py  tsig.py  wire_read_tcp.py  xfr.py  zonediff.py
examples/.arch-ids/: =id  mx.py.id  name.py.id  reverse.py.id  xfr.py.id
tests/: Makefile  bugs.py  dnssec.py  doh.py  doq.py  example  example1.good  example2.good  example3.good  example4.good  flags.py  generate.py  grange.py  keys.py  md_module.py  message.py  name.py  namedict.py  nanonameserver.py  nanoquic.py  ntoaaton.py  psl_test.txt  rdtypeandclass.py  rdtypeanyloc.py  resolver.py  rrset.py  set.py  stxt_module.py  test_address.py  test_async.py  test_btree.py  test_btreezone.py  test_bugs.py  test_constants.py  test_ddr.py  test_dnssec.py  test_dnssec_alg.py  test_dnssecalgs.py  test_doh.py  test_doq.py  (+56 more)
tests/.arch-ids/: =id  Makefile.id  example.id  example1.good.id  example2.good.id  flags.py.id  message.py.id  name.py.id  namedict.py.id  ntoaaton.py.id  rdtypeandclass.py.id  resolver.py.id  rrset.py.id  set.py.id  tokenizer.py.id  update.py.id  zone.py.id
tests/tls/: ca.crt  private.pem  public.crt
tests/tsigkeys/: 1.key  2.key  3.key  4.key  5.key
util/: constants-tool  copyrights  download-psl  generate-features  generate-mx-pickle.py  generate-rdatatype-doc.py  make-test-project  update-version  uv-dev-setup
util/.arch-ids/: =id  COPYRIGHT.id  copyrights.id
(+12 files in other folders)
