[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "dnspython"
description = "DNS toolkit"
authors = [{ name = "Bob Halley", email = "halley@dnspython.org" }]
license = "ISC"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "coverage>=7.0",
    "flake8>=7",
    "mypy>=1.8",
    "pylint>=3",
    "pytest>=7.4",
    "pytest-cov>=4.1.0",
    "sphinx>=7.2.0",
    "twine>=4.0.0",
    "wheel>=0.42.0",
]
dnssec = ["cryptography>=41"]
doh = ["httpcore>=1.0.0", "httpx>=0.26.0", "h2>=4.1.0"]
doq = ["aioquic>=0.9.25"]
idna = ["idna>=3.6"]
trio = ["trio>=0.23"]
wmi = ["wmi>=1.5.1"]

[project.urls]
homepage = "https://www.dnspython.org"
repository = "https://github.com/rthalley/dnspython.git"
documentation = "https://dnspython.readthedocs.io/en/stable/"
issues = "https://github.com/rthalley/dnspython/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/dns/*.py",
    "/dns/**/*.py",
    "/dns/py.typed",
    "/examples/*.txt",
    "/examples/*.py",
    "/tests/*.txt",
    "/tests/*.py",
    "/tests/*.good",
    "/tests/example",
    "/tests/query",
    "/tests/*.pickle",
    "/tests/*.text",
    "/tests/*.generic",
    "/tests/tls/*.crt",
    "/tests/tls/*.pem",
    "/util/**",
]

[tool.hatch.build.targets.wheel]
include = ["dns/*.py", "dns/**/*.py", "dns/py.typed"]

[tool.hatch.envs.default]
features = ["trio", "dnssec", "idna", "doh", "doq", "dev"]

[tool.hatch.version]
source = "code"
path = "dns/version.py"
expression = "version"

[tool.ruff]
lint.ignore = ['E741', 'F401']

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "pythoncom"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wmi"
ignore_missing_imports = true
