[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"
# You can also use "uv" instead
#requires = ["uv_build>=0.9.1,<0.10.0"]
#build-backend = "uv_build"

[project]
name = "dnspython"
description = "DNS toolkit"
authors = [{ name = "Bob Halley", email = "halley@dnspython.org" }]
license = { text = "ISC" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
version = "2.9.0dev0"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "coverage>=7.0",
    "hypercorn>=0.17.0",
    "pyright>=1.1.405",
    "pytest>=8.4",
    "pytest-cov>=6.2.0",
    "quart-trio>=0.12.0",
    "ruff>=0.13.2",
    "sphinx>=8.2.0 ; python_version >= '3.11'",
    "sphinx-rtd-theme>=3.0.0 ; python_full_version >= '3.11'",
    "twine>=6.1.0",
    "ty>=0.0.1a32",
    "wheel>=0.45.0",
]
dnssec = ["cryptography>=45"]
doh = ["httpcore>=1.0.0", "httpx>=0.28.0", "h2>=4.2.0"]
doq = ["aioquic>=1.2.0"]
idna = ["idna>=3.10"]
trio = ["trio>=0.30"]
wmi = ["wmi>=1.5.1; platform_system=='Windows'"]

[project.urls]
homepage = "https://www.dnspython.org"
repository = "https://github.com/rthalley/dnspython.git"
documentation = "https://dnspython.readthedocs.io/en/stable/"
issues = "https://github.com/rthalley/dnspython/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/dns/*.py",
    "/dns/**/*.py",
    "/dns/py.typed",
    "/examples/*.txt",
    "/examples/*.py",
    "/tests/*.txt",
    "/tests/*.py",
    "/tests/*.good",
    "/tests/example",
    "/tests/query",
    "/tests/*.pickle",
    "/tests/*.text",
    "/tests/*.generic",
    "/tests/tls/*.crt",
    "/tests/tls/*.pem",
    "/util/**",
]

[tool.hatch.build.targets.wheel]
include = ["dns/*.py", "dns/**/*.py", "dns/py.typed"]

[tool.hatch.envs.default]
features = ["trio", "dnssec", "idna", "doh", "doq", "dev"]

[tool.uv.build-backend]
module-name = "dns"
module-root = ""
source-include = [
    "/dns/*.py",
    "/dns/**/*.py",
    "/dns/py.typed",
    "/examples/*.txt",
    "/examples/*.py",
    "/tests/*.txt",
    "/tests/*.py",
    "/tests/*.good",
    "/tests/example",
    "/tests/query",
    "/tests/*.pickle",
    "/tests/*.text",
    "/tests/*.generic",
    "/tests/tls/*.crt",
    "/tests/tls/*.pem",
    "/util/**",
]
source-exclude = [
    ".pytest_cache",
    ".DS_Store",
]

[tool.ruff]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
lint.ignore = [
    "E501",
    "E741",
    "I001",
    "B904",
    "B011",
    "UP006",
    "UP035",
]
lint.exclude = ["tests/*"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "pythoncom"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wmi"
ignore_missing_imports = true

[tool.pyright]
reportUnsupportedDunderAll = false
exclude = ["dns/win32util.py", "examples/*.py", "tests/*.py"]
