[metadata]
name = dnspython
version = 2.3.0
author = Bob Halley
author_email = halley@dnspython.org
license = ISC
license_file = LICENSE
description = DNS toolkit
url = https://www.dnspython.org
project_urls =
    Bug Tracker = https://github.com/rthalley/dnspython/issues
    Documentation = https://dnspython.readthedocs.io/en/stable/
    Source Code = https://github.com/rthalley/dnspython
long_description = dnspython is a DNS toolkit for Python. It supports almost all
    record types. It can be used for queries, zone transfers, and dynamic
    updates.  It supports TSIG authenticated messages and EDNS0.

    dnspython provides both high and low level access to DNS. The high
    level classes perform queries for data of a given name, type, and
    class, and return an answer set.  The low level classes allow
    direct manipulation of DNS zones, messages, names, and records.
long_description_content_type = text/plain
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Topic :: Internet :: Name Service (DNS)
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
provides = dns

[options]
packages =
    dns
    dns.rdtypes
    dns.rdtypes.IN
    dns.rdtypes.ANY
    dns.rdtypes.CH
python_requires = >=3.7
test_suite = tests
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3

[options.extras_require]
DOH = httpx>=0.21.1; h2>=4.1.0; requests; requests-toolbelt
IDNA = idna>=2.1
DNSSEC = cryptography>=2.6
trio = trio>=0.14.0
curio = curio>=1.2; sniffio>=1.1
wmi = wmi>=1.5.1
DOQ = aioquic>=0.9.20

[options.package_data]
dns = py.typed
